<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.snomed.otf</groupId>
	<version>4.5.0-SNAPSHOT</version>
	<artifactId>reporting-engine</artifactId>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.6.RELEASE</version>
	</parent>

	<modules>
		<module>script-engine</module>
		<module>reporting-engine-worker</module>
		<module>schedule-manager</module>
	</modules>

	<properties>
		<java.version>1.8</java.version>
		<packageName>${project.artifactId}</packageName>
		<execFinalName>${project.build.finalName}.jar</execFinalName>
		<snowowl.version>4.8.0</snowowl.version>
		<otf.common.version>3.2.0-SNAPSHOT</otf.common.version>
		<spring.activeMQ.version>5.15.0</spring.activeMQ.version>
		<springfox-swagger.version>2.7.0</springfox-swagger.version>
		<maven.test.skip>true</maven.test.skip>
	</properties>

	<repositories>
		<repository>
			<id>ihtsdo-releases</id>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>false</enabled></snapshots>
			<url>https://nexus3.ihtsdotools.org/repository/maven-releases/</url>
		</repository>
		<repository>
			<id>ihtsdo-snapshots</id>
			<releases><enabled>false</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
			<url>https://nexus3.ihtsdotools.org/repository/maven-snapshots/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>ihtsdo-public-nexus</id>
			<name>IHTSDO Public Nexus Releases</name>
			<url>https://maven3.ihtsdotools.org/repositories/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>ihtsdo-public-nexus</id>
			<name>IHTSDO Public Nexus Snapshots</name>
			<url>https://maven3.ihtsdotools.org/repositories/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

</project>
